# WFSafeBPF

./: .gitignore  install-dependencies.sh
client/: Cargo.toml  config.yaml  install-service.sh  wfsafe-client.service
client/src/: bpf_manager.rs  cli.rs  config.rs  daemon.rs  handlers.rs  http_client.rs  ipc.rs  ipc_server.rs  log_macros.rs  main.rs
eBPF/: Makefile  blake2s_reference_loader.c  blake2s_test.bpf.c  blake2s_test_loader  blake2s_test_loader.c  checksum.h  client_config.h  config.h  consts.h  dummy.h  fragmentation.h  hmac.h  loader.c  network_utils.h  packet_dropper.bpf.c  padding.h  secret_keys.h  seq_num_translation.h  skb_mark.h  vmlinux.h  wfsafebpf.bpf.c
eBPF/kernel/: Makefile  blake2s.h  checksum.h  client_config.h  config.h  consts.h  dummy.h  fragmentation.h  hmac.h  loader.c  measure_bytes.h  measure_config.h  measure_times.h  padding.h  seq_num_translation.h  skb_mark.h  wfsafebpf.bpf.c
eBPF/user/: Cargo.toml  build.rs  loader.c
eBPF/user/src/: lib.rs
eBPF/user/src/bpf/: loader.rs  maps.rs  mod.rs
eBPF/user/src/cleanup/: translation_cleanup.rs
eBPF/user/src/measurements/: csv_writer.rs  experiment_type.rs  mod.rs  ringbuf_reader.rs
eBPF/user/src/models/: bpf_config.rs  client_config.rs  mod.rs
experiment/: run_probability_tests.sh
experiment/client/: Cargo.toml
experiment/client/src/: main.rs  query_client.rs  resolution_client.rs
experiment/server/: Cargo.toml
experiment/server/src/: main.rs  query_server.rs  resolution_server.rs
experiments/client/: Cargo.toml
experiments/client/src/: main.rs
experiments/server/: Cargo.toml
experiments/server/src/: main.rs
server/: Cargo.toml  Rocket.toml  build.rs
server/src/: main.rs
server/src/bpf/: loader.rs  maps.rs  mod.rs
server/src/config/: mod.rs  rocket_config.rs
server/src/crons/: cleanup.rs  config_cleanup.rs  keys_cleanup.rs  measurement_shutdown.rs  mod.rs  monitoring.rs  timestamp_cleanup.rs  translation_cleanup.rs
server/src/dtos/: client_config.rs  mod.rs  secret_keys.rs
server/src/guards/: client_ip.rs  mod.rs
server/src/models/: mod.rs  secret_keys.rs  seq_translation.rs
server/src/services/: client_config_service.rs  keys_service.rs  mod.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
shared/src/bpf/: maps.rs
shared/src/cleanup/: mod.rs  monitoring.rs  timestamp_cleanup.rs
(+2 files in other folders)
