[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["client-mode"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
libbpf-rs = "0.25.0"
nix = { version = "0.29", features = ["net"] }
