[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["server-mode"] }
libbpf-rs = "0.25.0"
rocket = { version = "0.5.1", features = ["json"] }
nix = { version = "0.29", features = ["net"] }
tokio = { version = "1", features = ["time"] }
