[package]
name = "user"
version = "0.1.0"
edition = "2021"

[features]
default = []
client-mode = []
server-mode = []

[dependencies]
libbpf-rs = "0.25.0"
nix = { version = "0.29", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["time", "rt"] }

[build-dependencies]
libbpf-cargo = "0.25.0"
